# python-stbl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  setup.py  stbl.spec
.github/workflows/: test.yml
src/stbl/: __about__.py  __cli__.py  stbl.py
src/stbl/commands/: __init__.py  export.py
tests/: conftest.py  test_cli.py  test_stbl.py
tests/res/: S4_220557DA_80000000_00000000598B0384.stbl
