[project]
name = "stbl"
version = "0.1.0"
description = "A package including command-line utilities to parse *.stbl files for modding game: The Sims."
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Garrett HE", email = "garrett.he@outlook.com" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
keywords = ["the-sims", "game", "stbl"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click (>=8.1.8,<9.0.0)",
]

[project.urls]
homepage = "https://github.com/garrett-he/python-stbl"
repository = "https://github.com/garrett-he/python-stbl.git"
changelog = "https://github.com/garrett-he/python-stbl/blob/main/CHANGELOG.md"

[project.scripts]
stbl = "stbl.__cli__:main"

[dependency-groups]
dev = [
    "chance (>=0.110,<0.111)",
    "nuitka (>=2.6.7, <3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "tox (>=4.23.2,<5.0.0)",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
lint = "pylint src/ tests/"
build = "python build.py"
